Implementação do layout estilo Spotify com cards dinâmicos de músicas

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Bem-vindo ao meu site</h1>
         <nav> <!-- Tag semântica que define uma seção de navegação/menu do site -->
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Inicio</a></li>
                 <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="#contato">Mais</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 - Todos os direitos reservados</p>
+        <p>&copy; 31-10-2025 - Todos os direitos reservados</p>
     </footer>
 
     <script src="app.js"></script>
